postgresql-9.4 (9.4~beta1-2) UNRELEASED; urgency=medium

  * Update watch file for 9.4.

 -- Christoph Berg <myon@debian.org>  Fri, 16 May 2014 12:42:31 +0200

postgresql-9.4 (9.4~beta1-1) experimental; urgency=low

  * Update for 9.4. Packaging based on 9.3 branch.
  * Bump to debhelper 9 to get debug symbol files based on build-ids.

 -- Christoph Berg <myon@debian.org>  Mon, 12 May 2014 22:08:37 +0200