@@ -12,16 +12,16 @@ Bug-Debian: http://bugs.debian.org/462037
 
 --- a/src/Makefile.global.in
 +++ b/src/Makefile.global.in
-@@ -99,7 +99,7 @@
+@@ -100,7 +100,7 @@ libdir := @libdir@
  pkglibdir = $(libdir)
  ifeq "$(findstring pgsql, $(pkglibdir))" ""
  ifeq "$(findstring postgres, $(pkglibdir))" ""
 -override pkglibdir := $(pkglibdir)/postgresql
-+override pkglibdir := $(pkglibdir)/postgresql/@PG_MAJORVERSION@/lib
++override pkglibdir := /usr/lib/postgresql/@PG_MAJORVERSION@/lib
  endif
  endif
  
-@@ -147,7 +147,7 @@
+@@ -148,7 +148,7 @@ endif # PGXS
  
  # These derived path variables aren't separately configurable.
  
@@ -41,7 +41,7 @@ Bug-Debian: http://bugs.debian.org/462037
  static const char *progname;
  static char mypath[MAXPGPATH];
  
-@@ -481,7 +483,6 @@
+@@ -481,7 +483,6 @@ main(int argc, char **argv)
  {
  	int			i;
  	int			j;
@@ -49,7 +49,7 @@ Bug-Debian: http://bugs.debian.org/462037
  
  	set_pglocale_pgservice(argv[0], PG_TEXTDOMAIN("pg_config"));
  
-@@ -497,13 +498,7 @@
+@@ -497,13 +498,7 @@ main(int argc, char **argv)
  		}
  	}
  
