@@ -1,8 +1,11 @@
 postgresql-9.4 (9.4~beta1-2) UNRELEASED; urgency=medium
 
   * Update watch file for 9.4.
+  * Enable multiarch support in libpq and friends. (Closes: #706849)
+    Support is automatically disabled when the distribution does not support
+    it.
 
- -- Christoph Berg <myon@debian.org>  Fri, 16 May 2014 12:42:31 +0200
+ -- Christoph Berg <myon@debian.org>  Tue, 27 May 2014 15:01:55 +0200
 
 postgresql-9.4 (9.4~beta1-1) experimental; urgency=low
 
